--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,11 @@ name = "pypi"
 requests = "*"
 beautifulsoup4 = "*"
 grequests = "*"
+prettytable = "*"
 
 [dev-packages]
 black = "*"
+flake8 = "*"
 
 [requires]
 python_version = "3.10"
